--- a/index.html
+++ b/index.html
@@ -266,11 +266,12 @@
                                 <img src="assets/github.png" width="32" height="32">
                                 <p><a href="https://github.com/jardigan" target="_blank">buscame en <br>Github</a></p>
                             </li>
+                            <footer class="bg-light py-5">
+                            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
+                            </footer>
                         </ul>
                     </div>
-
-
-
+                
                 </div>
             </div>
         </section>
