--- a/index.html
+++ b/index.html
@@ -35,45 +35,23 @@
             </div>
         </nav>
         <!-- Masthead-->
-    </nav>
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            </ol>
-            <div class="carousel-inner">
-            <div class="carousel-item active" data-interval="10000">
-                <img src="assets/img/fondo.jpg" class="d-block w-70" alt="slider-1" width=1400px height=660px>
-                <div class="carousel-caption d-none d-md-block">
-                <h1>DEVELEPOR IN UIPATH</h1>
-                <p>Me presento mi nombre es daniel ferney bossa
-                    fuentes y soy licenciado en diseño tecnologico
-                    y estudiante de tecnologia en analisis y desarrollo
-                    de sistemas de informacion.
-                </p>
+        <header class="masthead">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center justify-content-center text-center">
+                    <div class="col-lg-10 align-self-end">
+                        <h1 class="text-uppercase text-white font-weight-bold">DEVELOPER IN UIPATH</h1>
+                        <hr class="divider my-4" />
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <p class="text-white-75 font-weight-light mb-5">Me presento mi nombre es daniel ferney bossa
+                            fuentes y soy licenciado en diseño tecnologico
+                            y estudiante de tecnologia en analisis y desarrollo
+                            de sistemas de informacion.</p>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">quieres saber mas de mi</a>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item" data-interval="10000">
-                <img src="assets/img/bg-masthead.jpg" class="d-block w-70" alt="slider-2" width=1400px height=660px >
-                <div class="carousel-caption d-none d-md-block">
-                    <h1>DEVELEPOR IN UIPATH</h1>
-                    <p>Me presento mi nombre es daniel ferney bossa
-                        fuentes y soy licenciado en diseño tecnologico
-                        y estudiante de tecnologia en analisis y desarrollo
-                        de sistemas de informacion.
-                    </p>
-                </div>
-            </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-    </div>
+        </header>
 </nav>
 
         <!-- About-->
@@ -108,7 +86,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">diseño a medida</h3>
+                            <h3 class="h4 mb-2">Diseño a medida</h3>
                             <p class="text-muted mb-0">
                                 Todos loc conocimientos aplicados para la resolucion de problemas.</p>
                         </div>
@@ -116,15 +94,15 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">diseño preparado para publicar</h3>
-                            <p class="text-muted mb-0">manejaremos secuencias simple avanzando hasta algo mas complejo</p>
+                            <h3 class="h4 mb-2">Diseño preparado para publicar</h3>
+                            <p class="text-muted mb-0">Manejaremos secuencias simple avanzando hasta algo mas complejo</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">diseños con toda pasion </h3>
-                            <p class="text-muted mb-0">aunque siempre estamos en aprendizaje, debemos enteder que no tendremos
+                            <h3 class="h4 mb-2">Diseños con toda mi pasion </h3>
+                            <p class="text-muted mb-0">Aunque siempre estamos en aprendizaje, debemos enteder que no tendremos
                                 una respuesta para todo. no hay razon para no buscar una solucion para la ingnorancia
                             </p>
                         </div>
@@ -139,7 +117,7 @@
                 <div class="col-md-6">
                     <img src="assets/primer bot.jpg"  class="rounded mx-auto d-block" alt="" width="600" height="300" style="border-radius: 20px;" >
                     <a title="primer robot" href="https://github.com/jardigan/uipath1/tree/main/registrar_pago_por_horas" ><img src="assets/github.png" class="rounded float-left" alt="" width="70" height="70"/></a>
-                    <p class="text-muted mb-0">este es el primer robot creado por mi. el cual  graba las horas 
+                    <p class="text-muted mb-0">Este es el primer robot creado por mi. el cual  graba las horas 
                         diarias, trabajadas por un empleado y las procesa y guarda en una archivo xslx (disponible para descargar en Github)
                     </p>
                 </div>
@@ -158,7 +136,7 @@
                     <div class="col-md-6">
                         <img src="assets/segundo bot.jpg"  class="rounded mx-auto d-block" alt="" width="600" height="300" style="border-radius: 20px;" >
                         <a title="segundo robot" href="https://github.com/jardigan/uipath2" ><img src="assets/github.png" class="rounded float-right" alt="" width="70" height="70"/></a>
-                        <p class="text-muted mb-0"> ste es el segundo robot desarrollado por mi y su funcion es extraer datos de dos archivos 
+                        <p class="text-muted mb-0"> Este es el segundo robot desarrollado por mi y su funcion es extraer datos de dos archivos 
                             xslx (facturas y empresas) y plazmarlos en otro archivo xslx y filtrar datos como que empresa esta en quiebra(disponible para descargar en Github)
                         </p>
                     </div>
@@ -168,7 +146,7 @@
                 <div class="col-md-6">
                     <img src="assets/tercer bot.jpg"  class="rounded mx-auto d-block" alt="" width="600" height="300" style="border-radius: 20px;" >
                     <img src="assets/github.png" class="rounded float-left" alt="" width="70" height="70"/></a>
-                    <p class="text-muted mb-0">el tercer desarrollado por mi se trata de utilisar la ui(user inteface) para generar una pagina web 
+                    <p class="text-muted mb-0">El tercer desarrollado por mi se trata de utilisar la ui(user inteface) para generar una pagina web 
                         en html 
                     </p>
                 </div>
@@ -185,7 +163,7 @@
                     <div class="col-md-6">
                         <img src="assets/cuarto bot.jpg"  class="rounded mx-auto d-block" alt="" width="600" height="300" style="border-radius: 20px;" >
                         <img src="assets/github.png" class="rounded float-right" alt="" width="70" height="70"/></a>
-                        <p class="text-muted mb-0"> cuarto robot desarrollado por mi el cual utiliza acme test uipath 
+                        <p class="text-muted mb-0"> Cuarto robot desarrollado por mi el cual utiliza acme test uipath 
                             para acceder al login y grabar datos en un archivo xsls y cerrar sesion 
                         </p>
                     </div>
@@ -194,7 +172,7 @@
                 <div class="col-md-6">
                     <img src="assets/quinto bot.jpg"  class="rounded mx-auto d-block" alt="" width="600" height="300" style="border-radius: 20px;" >
                     <a title="rpa challenge" href="https://github.com/jardigan/uipath3" ><img src="assets/github.png" class="rounded float-left" alt="" width="70" height="70"/></a>
-                    <p class="text-muted mb-0"> el quinto robot es, rpa challenge se desarolla como una especie 
+                    <p class="text-muted mb-0"> El quinto robot es, rpa challenge se desarolla como una especie 
                         de quiz en el proceso de acreditacion para rpa developer en uipath academy (disponible para descargar Github)
                     </p>
                 </div>
@@ -266,18 +244,16 @@
                                 <img src="assets/github.png" width="32" height="32">
                                 <p><a href="https://github.com/jardigan" target="_blank">buscame en <br>Github</a></p>
                             </li>
-                            <footer class="bg-light py-5">
-                            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
-                            </footer>
                         </ul>
-                    </div>
-                
+                    </div>        
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted"></div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2018 - Image UIPATH</div></div>
+
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
